# zcrm

./: .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  cliff.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs  crm.yml
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: auth.rs  crm.rs  mod.rs
crm/src/pb/: crm.rs
fixtures/: cert.pem  key.pem  rootCA.pem  token
metadata-svc/: Cargo.toml  build.rs  metadata_svc.yml
metadata-svc/src/: config.rs  lib.rs  main.rs  metadata_svc.rs
metadata-svc/src/abi/: mod.rs
metadata-svc/src/pb/: metadata.rs
notify-svc/: Cargo.toml  build.rs  notify.yml
notify-svc/src/: config.rs  lib.rs  main.rs
notify-svc/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
notify-svc/src/pb/: notify.rs
protos/crm/: crm.proto
protos/metadata-svc/: metadata.proto
protos/notify-svc/: notify.proto
protos/user-stat-svc/: message.proto  rpc.proto
user-stat-svc/: .env  Cargo.toml  build.rs  user_stat_svc.yml
user-stat-svc/examples/: gen_data.rs
user-stat-svc/migrations/: 20240713125347_init.sql
user-stat-svc/src/: config.rs  lib.rs  main.rs
user-stat-svc/src/abi/: mod.rs
user-stat-svc/src/pb/: mod.rs  user_stat_svc.rs
user-stat-svc/src/services/: mod.rs  user_stats_svc.rs  user_stats_svc_test.rs
user-stat-svc/tests/: service.rs
