[workspace]
members = ["crm", "user-stat-svc"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
tonic = { version = "0.12.1", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
serde_yaml = "0.9.34"
itertools = "0.13.0"

# for build proto
