[workspace]
members = ["crm", "metadata-svc", "notify-svc", "user-stat-svc"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
derive_builder = "0.20.0"
prost = "0.13.1"
rand = "0.8.5"
prost-build = "0.13.1"
#prost-build = "0.12.4"
prost-types = "0.13.1"
tonic = { version = "0.12.1", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
serde_yaml = "0.9.34"
itertools = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# for build proto
proto-builder-trait = "0.6.1"

# current pro
notify-svc = { path = "notify-svc" }
user-stat-svc = { path = "user-stat-svc" }
