[package]
name = "user-stat-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test_utils = ["sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
sqlx-db-tester = { version = "0.4.2", optional = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { worksapce = true }
serde_yaml = { workspace = true }
futures = { worksapce = true }
itertools = { workspace = true }
derive_builder = { worksapce = true }

# for build proto

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { worksapce = true }
tonic-build = { workspace = true }

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive", "chrono"] }
nanoid = "0.4.0"
user-stat-svc = { workspace = true, features = ["test_utils"]}
